--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hyper_ui
+name: etercommerce
 description: A new Flutter project.
 publish_to: 'none' 
 version: 1.0.0+1
@@ -37,6 +37,7 @@ dependencies:
   flutter_animate: ^4.1.1+1
   dio: ^5.0.1
   flutter_staggered_grid_view: ^0.6.2
+  get: ^4.6.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
